# rscale

./: .dockerignore  .gitignore  .justfile  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: container.yml  e2e.yml  release.yml
config/: config.example.toml
crates/rscale/: Cargo.toml
crates/rscale/benches/: map_response.rs  policy.rs  protocol.rs
crates/rscale/benches/support/: mod.rs
crates/rscale/migrations/: 0001_initial_schema.sql
crates/rscale/src/: config.rs  error.rs  lib.rs  main.rs
crates/rscale/src/app/: health.rs  mod.rs  ports.rs
crates/rscale/src/cli/: mod.rs
crates/rscale/src/domain/: audit.rs  auth_key.rs  backup.rs  control.rs  dns.rs  mod.rs  node.rs  policy.rs  principal.rs  route.rs
crates/rscale/src/infra/: derp.rs  derp_server.rs  mod.rs  telemetry.rs
crates/rscale/src/infra/auth/: break_glass.rs  mod.rs  oidc.rs
crates/rscale/src/infra/db/: mod.rs  postgres.rs  protocol.rs
crates/rscale/src/protocol/: derp.rs  keys.rs  mod.rs  noise.rs  service.rs  types.rs
crates/rscale/src/server/: mod.rs
crates/rscale/tests/: config_protocol_integration.rs  domain_policy_integration.rs
deploy/: docker-compose.tailscale.yaml  docker-compose.yaml
web/: next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/(console)/: layout.tsx
web/app/(console)/access/: page.tsx
web/app/(console)/audit/: page.tsx
web/app/(console)/monitoring/: page.tsx
web/app/(console)/network/: page.tsx
web/app/(console)/nodes/: page.tsx
web/app/(console)/overview/: page.tsx
web/app/login/: page.tsx
web/components/: auth-key-table.tsx  node-table.tsx  route-table.tsx  status-badges.tsx
web/components/console/: console-context.tsx  console-pages.tsx  console-shell.tsx  interaction.ts  login-page.tsx  monitoring-page.tsx  primitives.tsx  strings.ts  use-persistent-ui-state.ts  use-url-query-state.ts
web/components/console/locales/: de.ts  en.ts  zh.ts
web/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  table.tsx  tabs.tsx  textarea.tsx
web/lib/: api.ts  connection.ts  console-i18n.ts  format.ts  types.ts
